--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <%# <navbar> %>
+    <h1>Le Wagon Spain!</h1>
     <%= yield %>
+    <%# <footer> %>
   </body>
 </html>
